Corrección de tests

--- a/ansiedad.html
+++ b/ansiedad.html
@@ -110,6 +110,6 @@
 
     </div>
 
-    <script src="src/js/ansiedad-test.js" defer></script>
+    <script type="module" src="/src/js/ansiedad-test.js"></script>
 </body>
 </html>
