--- a/depresion.html
+++ b/depresion.html
@@ -110,6 +110,6 @@
 
     </div>
 
-    <script src="src/js/depresion-test.js" defer></script>
+    <script type="module" src="/src/js/depresion-test.js"></script>
 </body>
 </html>
