--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     <meta name="twitter:description" content="Atención psiquiátrica de emergencia en Caracas. Consultas online y a domicilio para ansiedad, depresión y crisis.">
     <meta name="twitter:image" content="https://i.imgur.com/n6NbTgR.png">
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="shortcut icon" href="/favicon_io/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- SEO Avanzado: Datos Estructurados (JSON-LD) para Google con Localización -->
     <script type="application/ld+json">
     {
@@ -86,12 +95,9 @@
     <header class="fixed top-0 left-0 right-0 z-50 p-4">
         <div id="header-nav" class="max-w-5xl mx-auto rounded-full transition-all duration-500 ease-in-out">
             <nav class="px-8 py-3 flex justify-between items-center">
-                <div class="flex items-center gap-2 text-white" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.5);">
-                    <svg class="w-5 h-5 text-green-200/90" viewBox="0 0 24 24" fill="currentColor"><path d="M17 8C8 10 5.9 16.17 3.82 21.34l1.89.66l.95-2.3c.48-1.17 1.99-2.35 3.34-2.7C17 15 17 8 17 8z"></path></svg>
-                    <span class="text-xl tracking-wider">
-                        <span class="font-light">Dra.</span>
-                        <span class="font-lora font-semibold">Eva Guevara</span>
-                    </span>
+                <div class="flex items-center gap-4 text-white" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.5);">
+                    <img src="logo.png" alt="Logo Dra. Eva Guevara" class="h-10">
+                    <span class="font-lora text-2xl font-medium">Dra. Eva Guevara</span>
                 </div>
                 <div class="hidden md:flex items-center space-x-8 text-white" style="text-shadow: 1px 1px 4px rgba(0,0,0,0.5);">
                     <a href="#about" class="hover:text-gray-300 transition-colors">Sobre Mí</a>
@@ -163,25 +169,14 @@
                         <img src="https://i.imgur.com/n6NbTgR.png" alt="Dra. Eva Guevara, Médico Psiquiatra especialista en psiquiatría forense" class="rounded-2xl shadow-2xl w-full h-auto object-cover">
                     </div>
                     <div class="animate-on-scroll fade-in-right" style="transition-delay: 200ms;">
-                        <div class="mb-12">
+                        <div>
                             <h2 class="text-3xl lg:text-4xl font-lora font-medium mb-6">Hola, soy Eva Guevara</h2>
-                            <p class="font-lora text-xl md:text-2xl leading-relaxed">
-                                Como médico psiquiatra y psicoterapeuta, te ayudo a comprender lo siguiente: eso que sientes, y que quizás crees que es parte de ti, tiene tratamiento. La ansiedad o tristeza no tienen por qué definirte. En un espacio de confianza, trabajaremos para que te reencuentres con tu bienestar integral.
+                            <p class="font-lora text-xl md:text-2xl leading-relaxed mb-8">
+                                Como médico psiquiatra y psicoterapeuta con más de 15 años de experiencia, mi principal objetivo es ayudarte a comprender que eso que sientes, y que quizás crees que es parte de ti, tiene tratamiento. Mi labor como conferencista refuerza este compromiso, buscando educar y derribar los estigmas sobre la salud mental. La ansiedad o la tristeza no tienen por qué definirte. En este espacio de confianza, trabajaremos juntos para que te reencuentres con tu bienestar integral.
                             </p>
-                        </div>
-                        <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
-                            <div class="bg-white/10 backdrop-blur-lg rounded-2xl p-4 text-center flex flex-col justify-center">
-                                <p class="text-[10px] sm:text-xs uppercase tracking-widest text-gray-300 mb-1 sm:mb-2">Rol Principal</p>
-                                <p class="text-lg sm:text-xl lg:text-2xl font-bold leading-tight">Médico Psiquiatra</p>
-                            </div>
-                            <div class="bg-white/10 backdrop-blur-lg rounded-2xl p-4 text-center flex flex-col justify-center">
-                                <p class="text-[10px] sm:text-xs uppercase tracking-widest text-gray-300 mb-1 sm:mb-2">Además</p>
-                                <p class="text-lg sm:text-xl lg:text-2xl font-bold leading-tight">Conferencista</p>
-                            </div>
-                            <div class="bg-white/10 backdrop-blur-lg rounded-2xl p-4 text-center flex flex-col justify-center">
-                                <p class="text-[10px] sm:text-xs uppercase tracking-widest text-gray-300 mb-1 sm:mb-2">Experiencia</p>
-                                <p class="text-xl sm:text-2xl lg:text-3xl font-bold">15+ Años</p>
-                            </div>
+                            <a href="#booking" class="border border-white/50 text-white font-semibold py-2 px-6 rounded-full hover:bg-white/10 hover:text-white transition-all duration-300">
+                                Agenda tu cita hoy
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -224,7 +219,7 @@
             <div class="absolute -top-1 left-0 right-0 h-80 bg-gradient-to-b from-white to-transparent z-5"></div>
             <div class="container mx-auto px-6 text-center relative z-10">
                  <h2 class="text-3xl lg:text-4xl font-bold mb-4 text-white animate-on-scroll fade-in-up">¿Qué te trae por aquí hoy?</h2>
-                 <p class="text-lg text-gray-200 mt-4 max-w-2xl mx-auto mb-12 animate-on-scroll fade-in-up" style="transition-delay: 150ms;">Agendar tu cita es un proceso sencillo y confidencial.</p>
+                 <p class="text-lg text-gray-200 mt-4 max-w-2xl mx-auto mb-12 animate-on-scroll fade-in-up" style="transition-delay: 150ms;">Para agendar, haz clic en la tarjeta que mejor describa tu situación. Si seleccionas ansiedad o depresión, un breve test nos ayudará a entender mejor tu caso y acelerar tu proceso de recuperación. Tu bienestar es la prioridad.</p>
                 <div class="max-w-3xl mx-auto animate-on-scroll fade-in-up" style="transition-delay: 300ms;">
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <!-- Opción 1: Emergencia -->
@@ -260,14 +255,14 @@
                             </div>
                         </a>
                         
-                        <!-- Opción 4: Dificultad para dormir -->
-                        <a href="#" class="group flex items-center text-left p-5 rounded-2xl bg-[#4A5C44]/70 hover:bg-[#4A5C44]/90 border border-white/20 hover:border-white/40 transition-all duration-300 transform hover:-translate-y-1">
+                        <!-- Opción 4: Consulta General -->
+                        <a href="https://wa.me/584140260731?text=Hola%20Dra.%20Guevara,%20quisiera%20agendar%20una%20consulta%20general." target="_blank" rel="noopener noreferrer" class="group flex items-center text-left p-5 rounded-2xl bg-[#4A5C44]/70 hover:bg-[#4A5C44]/90 border border-white/20 hover:border-white/40 transition-all duration-300 transform hover:-translate-y-1">
                             <div class="mr-5 flex-shrink-0 bg-white/20 rounded-full p-3">
-                                 <svg class="w-7 h-7 text-indigo-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+                                <svg class="w-7 h-7 text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path></svg>
                             </div>
                             <div>
-                                <h3 class="font-semibold text-lg text-white">Me cuesta dormir</h3>
-                                <p class="text-sm text-gray-300">Consejos para un mejor descanso nocturno.</p>
+                                <h3 class="font-semibold text-lg text-white">Agendar Consulta General</h3>
+                                <p class="text-sm text-gray-300">Si prefieres hablar directamente, para otros motivos o si tienes dificultades para dormir.</p>
                             </div>
                         </a>
                     </div>
@@ -279,14 +274,19 @@
     <footer class="bg-verde-oscuro text-white relative">
         <div class="absolute bottom-full left-0 right-0 h-48 bg-gradient-to-t from-[#4A5C44] to-transparent"></div>
         <div class="container mx-auto px-6 py-12 text-center">
-            <p class="text-lg font-semibold mb-2">Dra. Eva Guevara</p>
-            <p class="text-gray-400 mb-4">Médico Psiquiatra | Especialista en Bienestar Emocional</p>
+            <img src="logo.png" alt="Logo Dra. Eva Guevara" class="h-16 mx-auto mb-2">
+            <p class="font-lora text-xl font-medium mb-4">Dra. Eva Guevara</p>
+            <p class="text-gray-400 mb-4">Médico Psiquiatra | Especialista en Psicoterapia Cognitivo Conductual y evaluación psicológica</p>
+            <p class="text-gray-400 mb-4">Psiquiatría Forense y atención de emergencias 24 horas en Caracas. Online y a domicilio.</p>
             <div class="flex justify-center space-x-6 mb-8">
-                <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="instagram"></i></a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="linkedin"></i></a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="twitter"></i></a>
+                <a href="https://www.instagram.com/evaguevara27" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors"><i data-lucide="instagram"></i></a>
             </div>
-            <p class="text-sm text-gray-500">&copy; 2025 Dra. Eva Guevara. Todos los derechos reservados.</p>
+            <p class="text-sm text-gray-400">&copy; 2025 Dra. Eva Guevara. Todos los derechos reservados.</p>
+            <p class="text-xs text-gray-400 mt-2">
+                Desarrollado por 
+                <a href="https://www.linkedin.com/in/napoleonbaca/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors">Napoleon Baca</a> de 
+                <a href="https://syntastudio.com/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors">Synta Studio</a>
+            </p>
         </div>
     </footer>
     
