--- a/ansiedad.html
+++ b/ansiedad.html
@@ -126,22 +126,64 @@
     </main>
 
     <footer class="bg-verde-oscuro text-white relative">
-        <div class="container mx-auto px-6 py-12 text-center">
-            <img src="logo.png" alt="Logo Dra. Eva Guevara" class="h-16 mx-auto mb-2">
-            <p class="font-lora text-xl font-medium mb-4">Dra. Eva Guevara</p>
-            <p class="text-gray-400 mb-4">Médico Psiquiatra | Especialista en Psicoterapia Cognitivo Conductual y evaluación psicológica</p>
-            <p class="text-gray-400 mb-4">Psiquiatría Forense y atención de emergencias 24 horas en Caracas. Online y a domicilio.</p>
-            <div class="flex justify-center space-x-6 mb-8">
-                <a href="https://www.instagram.com/evaguevara27" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
+        <div class="container mx-auto px-6 pt-16 pb-8">
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center md:text-left">
+                <!-- Columna 1: Logo y Descripción -->
+                <div class="md:col-span-2">
+                    <div class="flex items-center justify-center md:justify-start mb-4">
+                        <img src="logo.png" alt="Logo Dra. Eva Guevara" class="h-12 mr-3">
+                        <span class="font-lora text-2xl font-medium">Dra. Eva Guevara</span>
+                    </div>
+                    <p class="text-gray-400 text-sm">
+                        Médico Psiquiatra con más de 15 años de experiencia, especialista en Psicoterapia Cognitivo Conductual, evaluación psicológica y Psiquiatría Forense.
+                    </p>
+                </div>
+
+                <!-- Columna 2: Evaluaciones -->
+                <div>
+                    <h3 class="font-semibold text-lg mb-4">Evaluaciones</h3>
+                    <ul class="space-y-2">
+                        <li><a href="ansiedad.html" class="text-gray-400 hover:text-white transition-colors">Test de Ansiedad</a></li>
+                        <li><a href="depresion.html" class="text-gray-400 hover:text-white transition-colors">Test de Depresión</a></li>
+                    </ul>
+                </div>
+
+                <!-- Columna 3: Contacto -->
+                <div>
+                    <h3 class="font-semibold text-lg mb-4">Contacto</h3>
+                    <ul class="space-y-2">
+                        <li>
+                            <a href="https://www.instagram.com/evaguevara27" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors flex items-center justify-center md:justify-start">
+                                <i data-lucide="instagram" class="w-5 h-5 mr-2"></i>
+                                Instagram
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://wa.me/584140260731?text=Hola%20Dra.%20Guevara,%20necesito%20ayuda%20con%20una%20emergencia." target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition-colors flex items-center justify-center md:justify-start">
+                                <i data-lucide="phone-call" class="w-5 h-5 mr-2"></i>
+                                Emergencias 24/7
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <p class="text-sm text-gray-400">&copy; 2025 Dra. Eva Guevara. Todos los derechos reservados.</p>
-            <p class="text-xs text-gray-400 mt-2">
-                Desarrollado por 
-                <a href="https://www.linkedin.com/in/napoleonbaca/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors">Napoleon Baca</a> de 
-                <a href="https://syntastudio.com/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors">Synta Studio</a>
-            </p>
+
+            <!-- Barra inferior -->
+            <div class="mt-12 pt-8 border-t border-white/10 text-center text-sm">
+                <p class="text-gray-400">&copy; 2025 Dra. Eva Guevara. Todos los derechos reservados.</p>
+                <p class="text-xs text-gray-500 mt-2">
+                    Desarrollado por 
+                    <a href="https://www.linkedin.com/in/napoleonbaca/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors">Napoleon Baca</a> de 
+                    <a href="https://syntastudio.com/" target="_blank" rel="noopener noreferrer" class="hover:text-white transition-colors">Synta Studio</a>
+                </p>
+            </div>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+      lucide.createIcons();
+    </script>
 
     <script type="module" src="/src/js/ansiedad-test.js"></script>
 </body>
